# Methoden-der-Softwareentwicklung-II

./: CMakeLists.txt  character.cpp  character.h  hero.cpp  hero.h  item.cpp  item.h  main.cpp
Aufgabe_1/: character.h  hero.cpp
Aufgabe_2/: CMakeLists.txt  character.cpp  hero.h  item.cpp  item.h  main.cpp
Aufgabe_3/: character.cpp  character.h  hero.cpp  hero.h  item.cpp  item.h  main.cpp
Aufgabe_4/: CMakeLists.txt  character.cpp  character.h  fighter.cpp  fighter.h  hero.cpp  hero.h  item.cpp  item.h  main.cpp  npc.h  sorcerer.cpp  sorcerer.h
Aufgabe_5/: CMakeLists.txt  character.cpp  character.h  fighter.cpp  fighter.h  hero.cpp  hero.h  item.h  main.cpp  npc.cpp  npc.h  sorcerer.cpp  sorcerer.h
Aufgabe_6/: CMakeLists.txt  character.cpp  character.h  fighter.cpp  fighter.h  game.cpp  game.h  hero.cpp  hero.h  item.cpp  main.cpp  npc.cpp  npc.h  sorcerer.cpp  sorcerer.h
Klausur/: CMakeLists.txt  exceptions.h  factory.cpp  factory.h  machine.cpp  machine.h  main.cpp  product.cpp  product.h
Klausurvorbereitung/: CMakeLists.txt  exceptions.h  main.cpp  motor.cpp  motor.h  robot.cpp  robot.h  sensor.cpp  sensor.h  sensor_types.cpp  sensor_types.h
